--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "homepage": "https://github.com/MSaeed1381/IE_HW2#readme",
     "dependencies": {
         "cors": "^2.8.5",
+        "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "mongoose": "^7.0.5"
     },
     "devDependencies": {
+        "@types/core-js": "^2.5.5",
         "nodemon": "^2.0.22"
     }
 }
