--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "homepage": "https://github.com/MSaeed1381/IE_HW2#readme",
     "dependencies": {
         "bcrypt": "^5.1.0",
+        "common-log-format": "^2.0.1",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
