--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
+        "express-rate-limit": "^6.7.0",
         "jsonwebtoken": "^9.0.0",
-        "mongoose": "^7.0.5"
+        "mongoose": "^7.0.5",
+        "pm2": "^5.3.0"
     },
     "devDependencies": {
         "@types/core-js": "^2.5.5",
