--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "Internet",
         "Engineering",
         "back-end",
-        "MEAN"
+        "MERN"
     ],
     "author": "Saeed Zare",
     "license": "MIT",
@@ -31,9 +31,12 @@
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "express-rate-limit": "^6.7.0",
+        "joi": "^17.9.2",
         "jsonwebtoken": "^9.0.0",
+        "lodash": "^4.17.21",
         "mongoose": "^7.0.5",
-        "pm2": "^5.3.0"
+        "pm2": "^5.3.0",
+        "validator": "^13.9.0"
     },
     "devDependencies": {
         "@types/core-js": "^2.5.5",
