--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
         "lodash": "^4.17.21",
         "mongoose": "^7.0.5",
         "pm2": "^5.3.0",
-        "validator": "^13.9.0"
+        "swagger-ui-express": "^5.0.0",
+        "validator": "^13.9.0",
+        "yaml": "^2.3.3"
     },
     "devDependencies": {
         "@types/core-js": "^2.5.5",
-        "nodemon": "^2.0.22"
+        "nodemon": "^3.0.1"
     }
 }
