--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,39 @@
 version: "3.9"
 
 services:
+  redis:
+    container_name: redis
+    image: 'redis:alpine'
+    ports:
+      - '6379:6379'
+
+  nginx:
+    container_name: nginx
+    build: ./nginx
+    ports:
+      - '80:80'
+    depends_on:
+      - app
+      - mongo_db
+
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+
   mongo_db:
-    container_name: db_container
+    container_name: mongo
     image: mongo:latest
     restart: always
     volumes:
       - mongo_db:/data/db
         
   app:
-    container_name: golestan_api
+    container_name: golestan
     depends_on:
       - mongo_db
     build: .
     restart: unless-stopped
     ports:
-      - 8080:8080
+      - '8080:8080'
     environment:
        PORT: 8080
        DATABASE_URI: mongodb://mongo_db:27017
